--- a/HotelService/src/main/resources/application.yml
+++ b/HotelService/src/main/resources/application.yml
@@ -13,18 +13,20 @@ spring:
       ddl-auto: update
     show-sql: true
 
+  config:
+    import: configserver:http://localhost:8086
 
 server:
   port: 8082
 
 
-eureka:
-  instance:
-    prefer-ip-address: true
-
-  client:
-    fetch-registry: true
-    register-with-eureka: true
-
-    service-url:
-      defaultZone: http://localhost:8084/eureka
+#eureka:
+#  instance:
+#    prefer-ip-address: true
+#
+#  client:
+#    fetch-registry: true
+#    register-with-eureka: true
+#
+#    service-url:
+#      defaultZone: http://localhost:8084/eureka
