--- a/ApiGateway/src/main/resources/application.yml
+++ b/ApiGateway/src/main/resources/application.yml
@@ -27,6 +27,15 @@ spring:
 server:
   port: 8085
 
+####### okta configurations for api gateway
+okta:
+  oauth2:
+    issuer: https://dev-92229183.okta.com/oauth2/default
+    audience: api://default
+    client-id: 0oagvrpvtkqWLaqba5d7
+    client-secret: QT6z5MiXpYJodDOi-2Z-hGAK-nIq-398ac4OmOzZFeEOyZEENCpYZgaKt7CGoySE
+    scopes: openid, profile, email, offline_access, internal
+
 
 #eureka:
 #  instance:
