--- a/HotelService/src/main/resources/application.yml
+++ b/HotelService/src/main/resources/application.yml
@@ -20,6 +20,11 @@ server:
   port: 8082
 
 
+okta:
+  oauth2:
+    issuer: https://dev-92229183.okta.com/oauth2/default
+    audience: api://default
+
 #eureka:
 #  instance:
 #    prefer-ip-address: true
