--- a/RatingService/pom.xml
+++ b/RatingService/pom.xml
@@ -48,6 +48,19 @@
 			<artifactId>spring-cloud-starter-config</artifactId>
 		</dependency>
 
+		
+		<!--Security-->
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.okta.spring</groupId>
+			<artifactId>okta-spring-boot-starter</artifactId>
+			<version>3.0.6</version>
+		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
